Prevent horizontal viewport overflow in lighthouse hack

--- a/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
+++ b/packages/scrabble-solver/src/components/Board/components/Cell/Cell.module.scss
@@ -2,6 +2,7 @@
 
 .cell {
   @include focus-effect;
+  @include lighthouse-input-size-hack;
 
   position: relative;
   display: table-cell;
