--- a/packages/scrabble-solver/src/components/Rack/Rack.module.scss
+++ b/packages/scrabble-solver/src/components/Rack/Rack.module.scss
@@ -7,6 +7,7 @@
 
 .tile {
   @include focus-effect;
+  @include lighthouse-input-size-hack;
 
   --background-color: var(--color--background);
 
