--- a/packages/scrabble-solver/src/components/Tile/Tile.module.scss
+++ b/packages/scrabble-solver/src/components/Tile/Tile.module.scss
@@ -66,22 +66,12 @@
 }
 
 .input {
+  width: 100%;
+  height: 100%;
   background-color: transparent;
   color: transparent;
   border: none;
   font-size: 16px; // prevent iOS from automatically zooming in on focus
-
-  // Hack for this Lighthouse warning:
-  // > Interactive elements like buttons and links should be large enough (48x48px), and have
-  // > enough space around them, to be easy enough to tap without overlapping onto other elements.
-  position: absolute;
-  top: -100%;
-  right: -100%;
-  bottom: -100%;
-  left: -100%;
-  width: 300%;
-  height: 300%;
-  clip-path: inset((100% / 3));
 }
 
 .character,
